[package]
name = "blueski"
version = "0.1.0"
edition = "2021"
description = "AppleScript-only macOS Messages send/receive daemon"
license = "MIT"
repository = "https://github.com/raz-team/blueski"
homepage = "https://github.com/raz-team/blueski"
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "blueski"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "process", "io-util", "net", "time", "signal"] }
axum = "0.7"
async-stream = "0.3"
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libsql = "0.9.30"
libc = "0.2.186"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
